# cvdbench

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEPLOY.md  README.md  SECURITY.md  spec.md
.github/workflows/: ci.yml
crates/cvd-cli/: Cargo.toml
crates/cvd-cli/src/: cmd.rs  display.rs  endpoint.rs  job_input.rs  lib.rs  main.rs  output.rs  signal.rs
crates/cvd-cli/src/cmd/: create.rs  delete.rs  list.rs  query.rs  watch.rs
crates/cvd-cli/src/display/: live.rs  summary.rs
crates/cvd-common/: Cargo.toml
crates/cvd-common/src/: error.rs  id.rs  lib.rs  metrics.rs  output.rs  parse.rs  path_safe.rs  spec.rs
crates/cvd-common/src/metrics/: aggregate.rs  histogram.rs
crates/cvd-common/src/output/: csv.rs  json.rs
crates/cvd-common/src/parse/: duration.rs  rate.rs  size.rs
crates/cvd-common/src/spec/: redact.rs  validate.rs
crates/cvd-master/: Cargo.toml
crates/cvd-master/src/: aggregate.rs  config.rs  events.rs  gc.rs  lib.rs  main.rs  manifest.rs  metrics.rs  scheduler.rs  service.rs  state.rs
crates/cvd-master/src/events/: subscriber.rs
crates/cvd-master/src/manifest/: dir_scan.rs  file_csv.rs  queue.rs
crates/cvd-master/src/scheduler/: fetch_job.rs  ready.rs  staleness.rs
crates/cvd-master/src/service/: cli_rpc.rs  worker_rpc.rs
crates/cvd-master/src/state/: job.rs  pending.rs
crates/cvd-master/tests/: e2e_cli_flow.rs  watcher_e2e.rs
crates/cvd-proto/: Cargo.toml  build.rs
crates/cvd-proto/src/: lib.rs
crates/cvd-worker/: Cargo.toml
crates/cvd-worker/src/: backoff.rs  cancel.rs  client.rs  clock.rs  fs_io.rs  id.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  pipeline.rs  prebuild.rs  progress.rs  rate_limit.rs  runner.rs
crates/cvd-worker/src/fs_io/: direct_io.rs
crates/cvd-worker/src/metrics/: histogram.rs
crates/cvd-worker/src/pipeline/: fetcher.rs  io_pool.rs
crates/cvd-worker/src/prebuild/: metadata.rs  write.rs
crates/cvd-worker/src/runner/: consistency.rs  metadata.rs  read.rs  write.rs
crates/cvd-worker/tests/: consistency_e2e.rs  consistency_runner_e2e.rs  dir_manifest_e2e.rs  job_lifecycle_e2e.rs  lifecycle_e2e.rs  metadata_e2e.rs  multi_scenario_e2e.rs  read_e2e.rs  watch_e2e.rs  write_e2e.rs
deploy/: prometheus-cvdbench.yml
deploy/grafana/: README.md
deploy/grafana/dashboards/: cvdbench-metrics.json
deploy/grafana/provisioning/dashboards/: cvdbench.yml
deploy/grafana/provisioning/datasources/: prometheus.yml
examples/: cvd-master.toml  job_consistency.json  job_metadata.json  job_metadata_readonly_examplefs_fuse.json  job_read.json  job_read_dir.json  job_write.json
examples/manifests/: sample.csv  sample_dirs.txt
proto/: master.proto
