[workspace]
resolver = "2"
members = [
    "crates/cvd-proto",
    "crates/cvd-common",
    "crates/cvd-master",
    "crates/cvd-worker",
    "crates/cvd-cli",
]

[workspace.package]
edition      = "2021"
rust-version = "1.78"
license      = "Apache-2.0"
publish      = false

# ─── 通用依赖（子 crate 用 `xxx.workspace = true` 引用） ─────────────────────────
[workspace.dependencies]
# gRPC（不开 tls feature —— 项目不实现 TLS）
tonic = { version = "0.12", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
] }
tonic-build = { version = "0.12", default-features = false, features = [
    "transport",
    "prost",
] }
prost       = "0.13"
prost-types = "0.13"

# 异步运行时
tokio        = { version = "1.40", features = ["full"] }
tokio-util   = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1"
futures      = "0.3"
async-trait  = "0.1"

# 错误 / 日志
thiserror          = "1"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 序列化
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
csv        = "1.3"

# CLI / TUI
clap      = { version = "4", features = ["derive"] }
crossterm = "0.28"
indicatif = "0.17"

# 度量 / 哈希 / ID
hdrhistogram = "7"
sha2         = "0.10"
uuid         = { version = "1", features = ["v4"] }
rand         = "0.8"

# S3 SDK（一致性测试旁路）
aws-config = "1"
aws-sdk-s3 = "1"

# ─── 全局 lint 策略 ──────────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
mod_module_files = "warn"
# tonic::Status 内嵌 String + Box<dyn Error>，约 176 字节；所有 RPC 方法都会
# 触发本 lint，对 tonic 生态属于噪音，统一 allow。
result_large_err = "allow"

# ─── Build profiles ─────────────────────────────────────────────────────────
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto       = "thin"
debug     = "line-tables-only"
