[package]
name         = "cvd-common"
version      = "0.1.0"
edition      = { workspace = true }
rust-version = { workspace = true }
license      = { workspace = true }
publish      = { workspace = true }
description  = "Shared cvdbench domain types: BenchSpec, Metrics, parsers, validators"

[dependencies]
cvd-proto = { path = "../cvd-proto" }

thiserror    = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
csv          = { workspace = true }
hdrhistogram = { workspace = true }
sha2         = { workspace = true }
uuid         = { workspace = true }
tracing      = { workspace = true }

[lints]
workspace = true
